<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_category">

    <TextView
        android:id="@+id/summary_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/padding_bottom_category_title"
        android:paddingEnd="@dimen/padding_category_end"
        android:paddingStart="@dimen/padding_category_start"
        android:paddingTop="@dimen/padding_top_category_title"
        android:text="@string/summary_group"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/summary_group">

        <TextView
            android:id="@+id/summary_quoted_profit_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/summary_quoted_profit_title"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="@+id/summary_quoted_profit_val"
            app:layout_constraintEnd_toStartOf="@+id/summary_quoted_profit_val"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/summary_quoted_profit_val" />

        <newsoft.calculator.CustomTextView
            android:id="@+id/summary_quoted_profit_val"
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/summary_cycle_time_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/summary_cycle_time_title"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="@+id/summary_cycle_time_val"
            app:layout_constraintEnd_toStartOf="@+id/summary_cycle_time_val"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/summary_cycle_time_val" />

        <newsoft.calculator.CustomTextView
            android:id="@+id/summary_cycle_time_val"
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summary_quoted_profit_val" />


        <TextView
            android:id="@+id/summary_reject_rate_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/summary_reject_rate_title"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="@+id/summary_reject_rate_val"
            app:layout_constraintEnd_toStartOf="@+id/summary_reject_rate_val"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/summary_reject_rate_val" />

        <newsoft.calculator.CustomTextView
            android:id="@+id/summary_reject_rate_val"
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summary_cycle_time_val" />

        <TextView
            android:id="@+id/summary_up_time_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/summary_up_time_title"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="@+id/summary_up_time_val"
            app:layout_constraintEnd_toStartOf="@+id/summary_up_time_val"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/summary_up_time_val" />

        <newsoft.calculator.CustomTextView
            android:id="@+id/summary_up_time_val"
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summary_reject_rate_val" />


        <TextView
            android:id="@+id/summary_total_profit_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/summary_total_profit_title"
            android:textColor="@color/colorWhite"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/summary_total_profit_val"
            android:background="@color/colorPurple"
            app:layout_constraintEnd_toStartOf="@+id/summary_total_profit_val"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/summary_total_profit_val" />

        <newsoft.calculator.CustomTextView
            android:id="@+id/summary_total_profit_val"
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summary_up_time_val" />

        <TextView
            android:id="@+id/summary_total_gain_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/summary_total_gain_title"
            android:textColor="@color/colorWhite"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/summary_total_gain_val"
            android:background="@color/colorDarkPink"
            app:layout_constraintEnd_toStartOf="@+id/summary_total_gain_val"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/summary_total_gain_val" />

        <newsoft.calculator.CustomTextView
            android:id="@+id/summary_total_gain_val"
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summary_total_profit_val" />


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>